@@ -1,16 +1,18 @@
 package com.cognizant.ecommerce.service.impl;
 
 import com.cognizant.ecommerce.dao.AddressRepository;
-import com.cognizant.ecommerce.dao.UserRepository; // New import needed
+import com.cognizant.ecommerce.dao.UserRepository;
 import com.cognizant.ecommerce.dto.address.AddressRequestDTO;
 import com.cognizant.ecommerce.dto.address.AddressResponseDTO;
+import com.cognizant.ecommerce.exception.AddressNotFoundException;
 import com.cognizant.ecommerce.exception.ResourceNotFoundException;
 import com.cognizant.ecommerce.model.Address;
-import com.cognizant.ecommerce.model.User; // New import needed
+import com.cognizant.ecommerce.model.User;
 import com.cognizant.ecommerce.service.AddressService;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
@@ -18,10 +20,11 @@ import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional // Good practice for service methods
 public class AddressServiceImpl implements AddressService {
 
     private final AddressRepository addressRepository;
-    private final UserRepository userRepository; // Added to support createAddress
+    private final UserRepository userRepository;
     private final ModelMapper modelMapper;
 
     @Override
@@ -29,12 +32,21 @@ public class AddressServiceImpl implements AddressService {
         return addressRepository.findAll().stream()
                 .map(this::mapToResponseDTO)
                 .collect(Collectors.toList());
+
     }
 
     @Override
     public Optional<AddressResponseDTO> getAddressById(Long addressId) {
+        return Optional.ofNullable(addressRepository.findById(addressId)
+                .map(this::mapToResponseDTO)
+                .orElseThrow(() -> new AddressNotFoundException("Address not found with ID: " + addressId)));
+    }
+
+    // This is the new method for throwing exceptions, as discussed
+    public AddressResponseDTO getAddressByIdOrThrow(Long addressId) {
         return addressRepository.findById(addressId)
-                .map(this::mapToResponseDTO);
+                .map(this::mapToResponseDTO)
+                .orElseThrow(() -> new AddressNotFoundException("Address not found with ID: " + addressId));
     }
 
     @Override
@@ -42,41 +54,33 @@ public class AddressServiceImpl implements AddressService {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new ResourceNotFoundException("User not found with ID: " + userId));
 
-        Address address = mapToEntity(addressRequestDTO);
+        // Use ModelMapper to simplify mapping
+        Address address = modelMapper.map(addressRequestDTO, Address.class);
         address.setUser(user);
 
         Address savedAddress = addressRepository.save(address);
-        return mapToResponseDTO(savedAddress);
+        return modelMapper.map(savedAddress, AddressResponseDTO.class);
     }
 
     @Override
     public AddressResponseDTO updateAddress(Long addressId, AddressRequestDTO addressRequestDTO) {
-        // Find the existing address by ID; throw an exception if not found
+        // Corrected: Use specific AddressNotFoundException
         Address existingAddress = addressRepository.findById(addressId)
-                .orElseThrow(() -> new ResourceNotFoundException("Address not found with ID: " + addressId));
+                .orElseThrow(() -> new AddressNotFoundException("Address not found with ID: " + addressId));
 
-        // Update the fields from the DTO
-        existingAddress.setAddress_line1(addressRequestDTO.getAddressLine1());
-        existingAddress.setAddress_line2(addressRequestDTO.getAddressLine2());
-        existingAddress.setCity(addressRequestDTO.getCity());
-        existingAddress.setCountry(addressRequestDTO.getCountry());
-        existingAddress.setPhone(addressRequestDTO.getPhone());
-        existingAddress.setPostal_code(addressRequestDTO.getPostalCode());
-        existingAddress.setState(addressRequestDTO.getState());
-        existingAddress.setIs_default(addressRequestDTO.isDefault());
+        // Use ModelMapper to simplify mapping
+        modelMapper.map(addressRequestDTO, existingAddress);
 
-        // Save the updated address entity
         Address updatedAddress = addressRepository.save(existingAddress);
-
-        // Convert and return the updated entity as a DTO
-        return mapToResponseDTO(updatedAddress);
+        return modelMapper.map(updatedAddress, AddressResponseDTO.class);
     }
 
     @Override
     public void deleteAddress(Long addressId) {
-        Address address = addressRepository.findById(addressId)
-                .orElseThrow(() -> new ResourceNotFoundException("Address not found with id: " + addressId));
-        addressRepository.delete(address);
+        // Corrected: Use specific AddressNotFoundException
+        addressRepository.findById(addressId)
+                .orElseThrow(() -> new AddressNotFoundException("Address not found with id: " + addressId));
+        addressRepository.deleteById(addressId); // Use deleteById for clarity
     }
 
     @Override
@@ -87,36 +91,11 @@ public class AddressServiceImpl implements AddressService {
         List<Address> addresses = addressRepository.findByUserId(userId);
         return addresses.stream()
                 .map(this::mapToResponseDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    // Consolidated and simplified mapping method
     private AddressResponseDTO mapToResponseDTO(Address address) {
-        AddressResponseDTO responseDTO = new AddressResponseDTO();
-        responseDTO.setId(address.getId());
-        responseDTO.setAddressLine1(address.getAddress_line1());
-        responseDTO.setAddressLine2(address.getAddress_line2());
-        responseDTO.setCity(address.getCity());
-        responseDTO.setState(address.getState());
-        responseDTO.setPostalCode((String) address.getPostal_code());
-        responseDTO.setCountry(address.getCountry());
-        responseDTO.setPhone(address.getPhone());
-        responseDTO.setDefault((Boolean) address.isDefault());
-        responseDTO.setCreatedAt(address.getCreated_at());
-        responseDTO.setUpdatedAt(address.getUpdated_at());
-        return responseDTO;
-    }
-
-
-    private Address mapToEntity(AddressRequestDTO dto) {
-        Address address = new Address();
-        address.setAddress_line1(dto.getAddressLine1());
-        address.setAddress_line2(dto.getAddressLine2());
-        address.setCity(dto.getCity());
-        address.setCountry(dto.getCountry());
-        address.setPhone(dto.getPhone());
-        address.setPostal_code(dto.getPostalCode());
-        address.setState(dto.getState());
-        address.setIs_default(dto.isDefault());
-        return address;
+        return modelMapper.map(address, AddressResponseDTO.class);
     }
 }
